syntax = "proto3";
package stockpb;

option go_package = "github.com/hmmm42/gorder-v2/common/genproto/stockpb";

import "orderpb/order.proto";

service StockService {
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
  rpc CheckIfItemInStock(CheckIfItemInStockRequest) returns (CheckIfItemInStockResponse);
}

message GetItemsRequest {
  repeated string ItemIDs = 1;
}

message GetItemsResponse {
  repeated orderpb.Item Items = 1;
}

message CheckIfItemInStockRequest {
  repeated orderpb.ItemWithQuantity Items = 1;
}

message CheckIfItemInStockResponse {
  int32 InStock = 1;
  repeated orderpb.Item Items = 2;
}